--- a/olimpia.html
+++ b/olimpia.html
@@ -6,157 +6,165 @@
     <link rel="stylesheet" href="css/olimpia/1920x1080/responsive.css" />
     <link rel="stylesheet" href="css/olimpia/1366x768/responsive.css" />
     <link rel="stylesheet" href="css/olimpia/720x1600/responsive.css" />
+    <link rel="stylesheet" href="css/olimpia/general.css" />
     <link rel="icon" href="assets/icons/olimpiafavicon.ico" />
     <script src="js/scroll.js"></script>
     <title>C.D. Olimpia</title>
   </head>
   <body>
-    <nav id="navbar">
-      <div class="logo">
-        <img src="assets/icons/olimpialogorb.png" alt="logoExample" />
-      </div>
-      <div class="botones">
-        <a href="index.html" data-en="Home" data-es="Inicio">Inicio</a>
-        <a href="#our-services" data-en="Company" data-es="Compañia"
-          >Compañia</a
-        >
-        <a href="#contact" data-en="Contact" data-es="Contacto">Contacto</a>
-      </div>
-      <div class="button_language" style="padding-right: 20px">
-        <button id="languageToggle">English</button>
-        <script src="js/change_language.js"></script>
-      </div>
-    </nav>
-
-    <header id="volver">
-      <div class="static-image">
-        <img src="assets/images/workout1.jpg" alt="" />
-      </div>
-      <img src="assets/icons/olimpialogorb.png" alt="Logo Principal" />
-    </header>
-
-    <section></section>
-    <main>
-      <div id="contain-1">
-        <img src="assets/images/workout2.jpg" alt="image" id="fondo" />
-        <div class="contain-text">
-          <h1>C.D. OLIMPIA</h1>
-          <br />
-          <p
-            data-en="C.D. Olimpia is dedicated to the formation and development of young soccer players, offering soccer players, offering high quality training programs designed to foster talent and designed to foster talent and passion for the sport. Our mission is to nurture soccer skills and core values such as teamwork values such as teamwork, discipline and perseverance. discipline and perseverance. Through a combination of advanced training techniques advanced training techniques and a holistic approach, C.D. Olimpia is committed to committed to developing well-rounded athletes ready to meet the challenges challenges both on and off the field."
-            data-es="C.D. Olimpia se dedica a la formación y desarrollo de jóvenes futbolistas, ofreciendo programas de entrenamiento de alta calidad diseñados para fomentar el talento y la pasión por el deporte. Nuestra misión es cultivar habilidades futbolísticas y valores fundamentales como el trabajo en equipo, la disciplina y la perseverancia. A través de una combinación de técnicas de entrenamiento avanzadas y un enfoque integral, C.D. Olimpia se compromete a desarrollar atletas completos y preparados para enfrentar los desafíos tanto dentro como fuera del campo de juego."
+    <div class="contain-father">
+      <nav id="navbar">
+        <div class="logo">
+          <img src="assets/icons/olimpialogorb.png" alt="logoExample" />
+        </div>
+        <div class="botones">
+          <a href="index.html" data-en="Home" data-es="Inicio">Inicio</a>
+          <a href="#our-services" data-en="Company" data-es="Compañia"
+            >Compañia</a
           >
-            C.D. Olimpia se dedica a la formación y desarrollo de jóvenes
-            futbolistas, ofreciendo programas de entrenamiento de alta calidad
-            diseñados para fomentar el talento y la pasión por el deporte.
-            Nuestra misión es cultivar habilidades futbolísticas y valores
-            fundamentales como el trabajo en equipo, la disciplina y la
-            perseverancia. A través de una combinación de técnicas de
-            entrenamiento avanzadas y un enfoque integral, C.D. Olimpia se
-            compromete a desarrollar atletas completos y preparados para
-            enfrentar los desafíos tanto dentro como fuera del campo de juego.
+          <a href="#contact" data-en="Contact" data-es="Contacto">Contacto</a>
+        </div>
+        <div class="button_language" style="padding-right: 20px">
+          <button id="languageToggle">English</button>
+          <script src="js/change_language.js"></script>
+        </div>
+      </nav>
+
+      <header id="volver">
+        <div class="static-image">
+          <img src="assets/images/workout1.jpg" alt="" />
+        </div>
+        <img src="assets/icons/olimpialogorb.png" alt="Logo Principal" id="logo"/>
+      </header>
+
+      <section></section>
+      <main>
+        <div id="contain-1">
+          <img src="assets/images/workout2.jpg" alt="image" id="fondo" />
+          <div class="contain-text">
+            <h1>C.D. OLIMPIA</h1>
+            <br />
+            <p
+              data-en="C.D. Olimpia is dedicated to the formation and development of young soccer players, offering soccer players, offering high quality training programs designed to foster talent and designed to foster talent and passion for the sport. Our mission is to nurture soccer skills and core values such as teamwork values such as teamwork, discipline and perseverance. discipline and perseverance. Through a combination of advanced training techniques advanced training techniques and a holistic approach, C.D. Olimpia is committed to committed to developing well-rounded athletes ready to meet the challenges challenges both on and off the field."
+              data-es="C.D. Olimpia se dedica a la formación y desarrollo de jóvenes futbolistas, ofreciendo programas de entrenamiento de alta calidad diseñados para fomentar el talento y la pasión por el deporte. Nuestra misión es cultivar habilidades futbolísticas y valores fundamentales como el trabajo en equipo, la disciplina y la perseverancia. A través de una combinación de técnicas de entrenamiento avanzadas y un enfoque integral, C.D. Olimpia se compromete a desarrollar atletas completos y preparados para enfrentar los desafíos tanto dentro como fuera del campo de juego."
+            >
+              C.D. Olimpia se dedica a la formación y desarrollo de jóvenes
+              futbolistas, ofreciendo programas de entrenamiento de alta calidad
+              diseñados para fomentar el talento y la pasión por el deporte.
+              Nuestra misión es cultivar habilidades futbolísticas y valores
+              fundamentales como el trabajo en equipo, la disciplina y la
+              perseverancia. A través de una combinación de técnicas de
+              entrenamiento avanzadas y un enfoque integral, C.D. Olimpia se
+              compromete a desarrollar atletas completos y preparados para
+              enfrentar los desafíos tanto dentro como fuera del campo de juego.
+            </p>
+          </div>
+          <div class="contain-service">
+            <div class="button-container" id="services-1">
+              <button>
+                <img src="assets/svg/add_circle.svg" alt="services" />
+              </button>
+              <div id="content-service-1" class="content">
+                <h1>Servicio 1</h1>
+                <p>Descripción del Servicio 1</p>
+              </div>
+            </div>
+            <div class="button-container" id="services-2">
+              <button>
+                <img src="assets/svg/add_circle.svg" alt="services" />
+              </button>
+              <div id="content-service-2" class="content">
+                <h1>Servicio 2</h1>
+                <p>Descripción del Servicio 2</p>
+              </div>
+            </div>
+            <div class="button-container" id="services-3">
+              <button>
+                <img src="assets/svg/add_circle.svg" alt="services" />
+              </button>
+              <div id="content-service-3" class="content">
+                <h1>Servicio 3</h1>
+                <p>Descripción del Servicio 3</p>
+              </div>
+            </div>
+            <div class="button-container" id="services-4">
+              <button>
+                <img src="assets/svg/add_circle.svg" alt="services" />
+              </button>
+              <div id="content-service-4" class="content">
+                <h1>Servicio 4</h1>
+                <p>Descripción del Servicio 4</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
+
+      <div class="section">
+        <div class="content-contact">
+          <h1 data-en="CONTACT" data-es="CONTACTO">CONTACTO</h1>
+          <br />
+          <p>
+            <img src="assets/svg/mail.svg" alt="email" />
+            info@innovativegroup.com
+          </p>
+          <br />
+          <p>
+            <img src="assets/svg/contact_phone.svg" alt="Phone" /> +1 23456789
           </p>
         </div>
-        <div class="contain-service">
-          <div class="button-container" id="services-1">
-            <button>
-              <img src="assets/svg/add_circle.svg" alt="services" />
-            </button>
-            <div id="content-service-1" class="content">
-              <h1>Servicio 1</h1>
-              <p>Descripción del Servicio 1</p>
-            </div>
+        <div class="content-ubi">
+          <div class="title">
+            <h1 data-en="LOCATIONS" data-es="UBICACIONES">UBICACIONES</h1>
           </div>
-          <div class="button-container" id="services-2">
-            <button>
-              <img src="assets/svg/add_circle.svg" alt="services" />
-            </button>
-            <div id="content-service-2" class="content">
-              <h1>Servicio 2</h1>
-              <p>Descripción del Servicio 2</p>
+          <div class="ubi">
+            <div class="content-img">
+              <img
+                src="assets/images/medellin.jpg"
+                alt="img-ubi"
+                id="colombia"
+              />
+              <h2>Medellin</h2>
             </div>
-          </div>
-          <div class="button-container" id="services-3">
-            <button>
-              <img src="assets/svg/add_circle.svg" alt="services" />
-            </button>
-            <div id="content-service-3" class="content">
-              <h1>Servicio 3</h1>
-              <p>Descripción del Servicio 3</p>
+            <div class="content-img">
+              <img src="assets/images/dallas.jpg" alt="img-ubi" id="eeuu" />
+              <h2>Dallas</h2>
             </div>
-          </div>
-          <div class="button-container" id="services-4">
-            <button>
-              <img src="assets/svg/add_circle.svg" alt="services" />
-            </button>
-            <div id="content-service-4" class="content">
-              <h1>Servicio 4</h1>
-              <p>Descripción del Servicio 4</p>
+            <div class="content-img">
+              <img src="assets/images/miami.jpg" alt="img-ubi" id="eeuu" />
+              <h2>Miami</h2>
+            </div>
+            <div class="content-img">
+              <img src="assets/images/mexico.jpg" alt="img-ubi" id="mexico" />
+              <h2>Ciudad de mexico</h2>
             </div>
           </div>
         </div>
       </div>
-    </main>
 
-    <div class="section">
-      <div class="content-contact">
-        <h1 data-en="CONTACT" data-es="CONTACTO">CONTACTO</h1>
-        <br />
-        <p>
-          <img src="assets/svg/mail.svg" alt="email" /> info@innovativegroup.com
-        </p>
-        <br />
-        <p>
-          <img src="assets/svg/contact_phone.svg" alt="Phone" /> +1 23456789
-        </p>
-      </div>
-      <div class="content-ubi">
-        <div class="title">
-          <h1 data-en="LOCATIONS" data-es="UBICACIONES">UBICACIONES</h1>
+      <footer>
+        <div class="contain">
+          &copy; Innovative Football Management. All rights reserved.
         </div>
-        <div class="ubi">
-          <div class="content-img">
-            <img src="assets/images/medellin.jpg" alt="img-ubi" id="colombia" />
-            <h2>Medellin</h2>
-          </div>
-          <div class="content-img">
-            <img src="assets/images/dallas.jpg" alt="img-ubi" id="eeuu" />
-            <h2>Dallas</h2>
-          </div>
-          <div class="content-img">
-            <img src="assets/images/miami.jpg" alt="img-ubi" id="eeuu" />
-            <h2>Miami</h2>
-          </div>
-          <div class="content-img">
-            <img src="assets/images/mexico.jpg" alt="img-ubi" id="mexico" />
-            <h2>Ciudad de mexico</h2>
-          </div>
+        <div id="redes">
+          <a href="instagram.com"
+            ><img src="assets/icons/instagram2.png" alt="Instagram"
+          /></a>
+          <a href="facebook.com"
+            ><img src="assets/icons/linkedin2.png" alt="Facebook"
+          /></a>
+          <a href="whatsapp.com"
+            ><img src="assets/icons/whatsapp2.png" alt="Whatsapp"
+          /></a>
         </div>
+      </footer>
+      <div class="back">
+        <button
+          onclick="document.getElementById('volver').scrollIntoView({ behavior: 'smooth' });"
+        >
+          <img src="assets/svg/arrow_upward.svg" alt="Volver" />
+        </button>
       </div>
-    </div>
-
-    <footer>
-      <div class="contain">
-        &copy; Innovative Football Management. All rights reserved.
-      </div>
-      <div id="redes">
-        <a href="instagram.com"
-          ><img src="assets/icons/instagram2.png" alt="Instagram"
-        /></a>
-        <a href="facebook.com"
-          ><img src="assets/icons/linkedin2.png" alt="Facebook"
-        /></a>
-        <a href="whatsapp.com"
-          ><img src="assets/icons/whatsapp2.png" alt="Whatsapp"
-        /></a>
-      </div>
-    </footer>
-    <div class="back">
-      <button
-        onclick="document.getElementById('volver').scrollIntoView({ behavior: 'smooth' });"
-      >
-        <img src="assets/svg/arrow_upward.svg" alt="Volver" />
-      </button>
     </div>
   </body>
 </html>
