--- a/innov8.html
+++ b/innov8.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/innov8/720x1600/responsive.css" />
     <!-- --------------------------------------------------------- -->
      <link rel="stylesheet" href="css/innov8/general.css">
+     <link rel="stylesheet" href="css/innov8/normalize.css">
     <link rel="icon" href="assets/icons/innov8favicon.ico" />
     <script src="js/scroll.js"></script>
     <title>Innov8</title>
