--- a/olimpia.html
+++ b/olimpia.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/olimpia/1366x768/responsive.css" />
     <link rel="stylesheet" href="css/olimpia/720x1600/responsive.css" />
     <link rel="stylesheet" href="css/olimpia/general.css" />
+    <link rel="stylesheet" href="css/olimpia/normalize.css">
     <link rel="icon" href="assets/icons/olimpiafavicon.ico" />
     <script src="js/scroll.js"></script>
     <title>C.D. Olimpia</title>
