Optimizacion en la carpeta de diseños del Index (Innovate) y SEO en IFM y en Innovate (Index)

--- a/IFM.html
+++ b/IFM.html
@@ -9,17 +9,17 @@
     <link rel="stylesheet" href="css/IFM/general.css" />
     <link rel="stylesheet" href="css/IFM/normalize.css" />
     <link rel="icon" href="assets/icons/ifmfavicon.ico" />
-    <script src="js/videos.js"></script>
-    <script src="js/time-video.js"></script>
-    <script src="js/scroll.js"></script>
+    <script src="js/videos.js" defer></script>
+    <script src="js/time-video.js" defer></script>
+    <script src="js/scroll.js" defer></script>
     <title>Innovative Football Management</title>
   </head>
   <body>
     <div id="contain-father">
       <nav id="navbar">
         <div class="logo">
-          <img src="assets/icons/escudo.png" alt="logoExample" />
-          <img src="assets/icons/IFM_Nombre2.png" alt="" />
+          <img src="assets/icons/escudo.png" alt="Escudo IFM Logo" />
+          <img src="assets/icons/IFM_Nombre2.png" alt="IFM Logo" />
         </div>
         <div class="botones">
           <a href="index.html" data-en="Home" data-es="Inicio">Inicio</a>
@@ -30,7 +30,7 @@
         </div>
         <div class="button_language" style="padding-right: 20px">
           <button id="languageToggle">English</button>
-          <script src="js/change_language.js"></script>
+          <script src="js/change_language.js" defer></script>
         </div>
       </nav>
 
@@ -42,14 +42,18 @@
           <video id="video2" src="assets/videos/gol2.mp4" muted></video>
         </div>
         <div class="contain-img">
-          <img src="assets/icons/ifmlastlogorb.png" alt="Logo Principal" id="logo"/>
+          <img
+            src="assets/icons/ifmlastlogorb.png"
+            alt="Logo Principal"
+            id="IFM Logo Principal"
+          />
         </div>
       </header>
 
       <section></section>
       <main>
         <div id="contain-1">
-          <img src="assets/images/balon2.jpg" alt="image" id="fondo" />
+          <img src="assets/images/balon2.jpg" alt="image" id="IFM campo" />
           <div class="contain-text">
             <h1>Innovative Football Management (IFM)</h1>
             <br />
@@ -72,7 +76,7 @@
           <div class="contain-service">
             <div class="button-container" id="services-1">
               <button>
-                <img src="assets/svg/add_circle.svg" alt="services" />
+                <img src="assets/svg/add_circle.svg" alt="Servicios de IFM 1" />
               </button>
               <div id="content-service-1" class="content">
                 <h1>Servicio 1</h1>
@@ -81,7 +85,7 @@
             </div>
             <div class="button-container" id="services-2">
               <button>
-                <img src="assets/svg/add_circle.svg" alt="services" />
+                <img src="assets/svg/add_circle.svg" alt="Servicios de IFM 2" />
               </button>
               <div id="content-service-2" class="content">
                 <h1>Servicio 2</h1>
@@ -90,7 +94,7 @@
             </div>
             <div class="button-container" id="services-3">
               <button>
-                <img src="assets/svg/add_circle.svg" alt="services" />
+                <img src="assets/svg/add_circle.svg" alt="Servicios de IFM 3" />
               </button>
               <div id="content-service-3" class="content">
                 <h1>Servicio 3</h1>
@@ -99,7 +103,7 @@
             </div>
             <div class="button-container" id="services-4">
               <button>
-                <img src="assets/svg/add_circle.svg" alt="services" />
+                <img src="assets/svg/add_circle.svg" alt="Servicios de IFM 4" />
               </button>
               <div id="content-service-4" class="content">
                 <h1>Servicio 4</h1>
@@ -114,7 +118,7 @@
         <div class="contain">
           <div class="info-contain">
             <div class="icon">
-              <img src="assets/images/beige.jpg" alt="Cliente" />
+              <img src="assets/images/beige.jpg" alt="IFM Profesionales 1" />
             </div>
             <div class="title">
               <h1
@@ -124,7 +128,7 @@
                 Edier Ocampo - Futbolista profesional
               </h1>
               <p
-                data-en="Thanks to IFM, I have been able to advance my career and continue to achieve my goals. my goals."
+                data-en="Thanks to IFM, I have been able to advance my career and continue to achieve my goals."
                 data-es="Gracias a IFM, he logrado avanzar mi carrera y seguir cumpliendo mis metas."
               >
                 Gracias a IFM, he logrado avanzar mi carrera y seguir cumpliendo
@@ -138,7 +142,7 @@
           </div>
           <div class="info-contain">
             <div class="icon">
-              <img src="assets/images/beige.jpg" alt="Cliente" />
+              <img src="assets/images/beige.jpg" alt="IFM Profesionales 2" />
             </div>
             <div class="title">
               <h1
@@ -148,7 +152,7 @@
                 Javier Pérez - Futbolista profesional
               </h1>
               <p
-                data-en="IFM provided me with the perfect platform to showcase my talent. Their team was always there to advise and support me every step of the way. step of the way. Today, I play in one of the most competitive leagues in the world, and I couldn't have done it without them. in the world, and I couldn't have done it without them."
+                data-en="IFM provided me with the perfect platform to showcase my talent. Their team was always there to advise and support me every step of the way. Today, I play in one of the most competitive leagues in the world, and I couldn't have done it without them."
                 data-es="IFM me proporcionó la plataforma perfecta para mostrar mi talento. Su equipo siempre estuvo ahí para asesorarme y apoyarme en cada paso del camino. Hoy, juego en una de las ligas más competitivas del mundo, y no podría haberlo hecho sin ellos."
               >
                 IFM me proporcionó la plataforma perfecta para mostrar mi
@@ -164,7 +168,7 @@
           </div>
           <div class="info-contain">
             <div class="icon">
-              <img src="assets/images/beige.jpg" alt="Cliente" />
+              <img src="assets/images/beige.jpg" alt="IFM Profesionales 3" />
             </div>
             <div class="title">
               <h1
@@ -174,7 +178,7 @@
                 Carlos Rivas - Futbolista profesional
               </h1>
               <p
-                data-en="The comprehensive support I received from IFM was critical to my success. Thanks to their marketing management, my profile has grown exponentially, and now I am a exponentially, and I am now reference both on and off the field."
+                data-en="The comprehensive support I received from IFM was critical to my success. Thanks to their marketing management, my profile has grown exponentially, and now I am a reference both on and off the field."
                 data-es="El apoyo integral que recibí de IFM fue fundamental para mi éxito. Gracias a su gestión de marketing, mi perfil ha crecido exponencialmente, y ahora soy un referente tanto dentro como fuera del campo."
               >
                 El apoyo integral que recibí de IFM fue fundamental para mi
@@ -196,12 +200,16 @@
           <h1 data-en="CONTACT" data-es="CONTACTO">CONTACTO</h1>
           <br />
           <p>
-            <img src="assets/svg/mail.svg" alt="email" />
+            <img src="assets/svg/mail.svg" alt="Email IFM" />
             info@innovativegroup.com
           </p>
           <br />
           <p>
-            <img src="assets/svg/contact_phone.svg" alt="Phone" /> +1 23456789
+            <img
+              src="assets/svg/contact_phone.svg"
+              alt="Contact Number Phone IFM"
+            />
+            +1 23456789
           </p>
         </div>
         <div class="content-ubi">
@@ -211,23 +219,35 @@
           <div class="ubi">
             <div class="content-img">
               <img
-                src="assets/images/colombia.jpg"
-                alt="img-ubi"
+                src="assets/images/medellin.jpg"
+                alt="Ubicaion de Innovate en Medellin"
                 id="colombia"
               />
               <h2>Medellin</h2>
             </div>
             <div class="content-img">
-              <img src="assets/images/dallas.jpg" alt="img-ubi" id="eeuu" />
+              <img
+                src="assets/images/dallas.jpg"
+                alt="Ubicaion de Innovate en Dallas"
+                id="eeuu"
+              />
               <h2>Dallas</h2>
             </div>
             <div class="content-img">
-              <img src="assets/images/miami.jpg" alt="img-ubi" id="eeuu" />
+              <img
+                src="assets/images/miami.jpg"
+                alt="Ubicaion de Innovate en Miami"
+                id="eeuu"
+              />
               <h2>Miami</h2>
             </div>
             <div class="content-img">
-              <img src="assets/images/mexico.jpg" alt="img-ubi" id="mexico" />
-              <h2>Ciudad de mexico</h2>
+              <img
+                src="assets/images/mexico.jpg"
+                alt="Ubicaion de Innovate en Mexico"
+                id="mexico"
+              />
+              <h2>Ciudad de Mexico</h2>
             </div>
           </div>
         </div>
@@ -238,14 +258,14 @@
           &copy; Innovative Football Management. All rights reserved.
         </div>
         <div id="redes">
-          <a href="instagram.com"
-            ><img src="assets/icons/instagram2.png" alt="Instagram"
+          <a href="https://www.instagram.com/innovativefootballmgmt/"
+            ><img src="assets/icons/instagram2.png" alt="Instagram de Innovate"
           /></a>
-          <a href="facebook.com"
-            ><img src="assets/icons/linkedin2.png" alt="Facebook"
+          <a href="https://www.facebook.com"
+            ><img src="assets/icons/linkedin2.png" alt="Facebook de Innovate"
           /></a>
-          <a href="whatsapp.com"
-            ><img src="assets/icons/whatsapp2.png" alt="Whatsapp"
+          <a href="https://www.whatsapp.com"
+            ><img src="assets/icons/whatsapp2.png" alt="Whatsapp de Innovate"
           /></a>
         </div>
       </footer>
