--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/index/1920x1080/responsive.css" />
-    <link rel="stylesheet" href="css/index/1366x768/responsive.css" />
-    <link rel="stylesheet" href="css/index/720x1600/responsive.css" />
-    <!-- <link rel="stylesheet" href="css/index/general.css" /> -->
+    <meta
+      name="description"
+      content="Innovative Group es un holding dedicado a ofrecer un ecosistema refinado para nuestros clientes en deportes, entretenimiento, cultura y negocios."
+    />
+    <meta
+      name="keywords"
+      content="Innovative Group, deportes, entretenimiento, cultura, negocios, ecosistema refinado"
+    />
+    <meta name="robots" content="index, follow" />
     <link rel="stylesheet" href="css/index/general.css" />
     <link rel="stylesheet" href="css/index/lenguage.css" />
     <link rel="stylesheet" href="css/index/main.css" />
@@ -22,16 +27,16 @@
       </div>
 
       <div class="image-contain" id="image-contain-1">
-        <img src="assets/images/instagram1.jpeg" alt="imagen1" />
-        <img src="assets/images/instagram2.jpg" alt="imagen2" />
+        <img src="assets/images/instagram1.jpeg" alt="Imagen de IFM 1" />
+        <img src="assets/images/instagram2.jpg" alt="Imagen de IFM 2" />
       </div>
       <div class="image-contain" id="image-contain-2">
-        <img src="assets/images/inicio1.jpg" alt="imagen1" />
-        <img src="assets/images/inicio2.jpg" alt="imagen2" />
+        <img src="assets/images/inicio1.jpg" alt="Imagen de C.D. Olimpia 1" />
+        <img src="assets/images/inicio2.jpg" alt="Imagen de C.D. Olimpia 2" />
       </div>
       <div class="image-contain" id="image-contain-3">
-        <img src="assets/images/inicio3.png" alt="imagen1" />
-        <img src="assets/images/inicio4.jpg" alt="imagen2" />
+        <img src="assets/images/inicio3.png" alt="Imagen de Innov8 1" />
+        <img src="assets/images/inicio4.jpg" alt="Imagen de Innov8 2" />
       </div>
       <div class="image-contain" id="image-contain-2">
         <img src="assets/images/inicio1.jpg" alt="imagen1" />
@@ -66,8 +71,8 @@
           divisiones especializadas."
         </p>
         <br /><br />
-        <a href="" style="display: flex; width: 100%; justify-content: end"
-          ><img src="assets/svg/arrow_forward.svg" alt="Back"
+        <a href="#" style="display: flex; width: 100%; justify-content: end"
+          ><img src="assets/svg/arrow_forward.svg" alt="Atrás"
         /></a>
       </div>
 
@@ -114,13 +119,13 @@
         </p>
 
         <br /><br />
-        <a href=""><img src="assets/svg/arrow_back.svg" alt="Back" /></a>
+        <a href=""><img src="assets/svg/arrow_back.svg" alt="Atrás" /></a>
       </div>
 
       <script src="js/cards.js"></script>
 
       <div class="logo-contain">
-        <img src="assets/icons/innovativelogorb.png" alt="imagen-logo" />
+        <img src="assets/icons/innovativelogorb.png" alt="Logo de Innovative" />
         <div class="buttoms">
           <a
             href="IFM.html"
