Optimizacion en la carpeta de diseños del Index (Innovate) y SEO en IFM y en Innovate (Index)

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
         <img src="assets/images/inicio4.jpg" alt="imagen2" />
       </div>
       <div class="image-contain" id="image-contain-2">
-        <img src="assets/images/inicio1.jpg" alt="imagen1" />
-        <img src="assets/images/inicio2.jpg" alt="imagen2" />
+        <img src="assets/images/inicio1.jpg" alt="Imagen de C.D. Olimpia 1" />
+        <img src="assets/images/inicio2.jpg" alt="Imagen de C.D. Olimpia 2" />
       </div>
       <div class="image-contain" id="image-contain-3">
-        <img src="assets/images/inicio3.png" alt="imagen1" />
-        <img src="assets/images/inicio4.jpg" alt="imagen2" />
+        <img src="assets/images/inicio3.png" alt="Imagen de Innov8 1" />
+        <img src="assets/images/inicio4.jpg" alt="Imagen de Innov8 2" />
       </div>
 
       <button id="position-left" data-en="INTRODUCTION" data-es="INTRODUCCION">
