Fix SEO and Desing IFM

--- a/IFM.html
+++ b/IFM.html
@@ -44,8 +44,8 @@
         <div class="contain-img">
           <img
             src="assets/icons/ifmlastlogorb.png"
-            alt="Logo Principal"
-            id="IFM Logo Principal"
+            alt="IFM Logo Principal"
+            id="logo"
           />
         </div>
       </header>
@@ -53,7 +53,7 @@
       <section></section>
       <main>
         <div id="contain-1">
-          <img src="assets/images/balon2.jpg" alt="image" id="IFM campo" />
+          <img src="assets/images/balon2.jpg" alt="IFM campo" id="fondo" />
           <div class="contain-text">
             <h1>Innovative Football Management (IFM)</h1>
             <br />
